feat: neon serverless db + seed sql

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,9 @@
+# https://generate-secret.vercel.app/32
+
 VERCEL_URL=
 NEXT_PUBLIC_APP_URL=
 
-# https://generate-secret.vercel.app/32
-JWT_SECRET_KEY=
-JWT_REFRESH_SECRET_KEY=
-
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NO_SSL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+DATABASE_URL=
 
 SMTP_HOST=
 SMTP_PORT=
