fix: storefront starter

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-starter",
-  "description": "Next.js starter in TypeScript with everything you need to build a production-ready web app.",
+  "name": "storefront-starter",
+  "description": "Storefront starter in TypeScript with everything you need to build a production-ready web app.",
   "version": "0.1.0",
   "private": true,
   "author": "Nathan Levitt <nathan@trudine.com>",
